--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,21 +1,23 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
+#CONFIG_ZMK_BACKLIGHT=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 
 #Config power
 CONFIG_ZMK_EXT_POWER=y
 
 #Stronger Bluetooth
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-#Mouse support
-CONFIG_ZMK_MOUSE=y
-
-#probably can delete as it has no effect on the display
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
 
 #Sleep
 CONFIG_ZMK_SLEEP=n
