--- a/config/corne.conf
+++ b/config/corne.conf
@@ -18,6 +18,9 @@ CONFIG_ZMK_EXT_POWER=y
 
 #Stronger Bluetooth
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+
 
 #Sleep
 CONFIG_ZMK_SLEEP=n
